# huggingface_courses

./: .gitignore  README.md  main.py  pyproject.toml
lllm_course/: README.md
llm_course/: chapter1_transformer_models.py
